--- a/NUtilities.Test/NUtilities.Tests.csproj
+++ b/NUtilities.Test/NUtilities.Tests.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{71AA8D7F-4E04-47C9-9AF1-17ED76B6939C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NUtilities.Test</RootNamespace>
-    <AssemblyName>NUtilities.Test</AssemblyName>
+    <RootNamespace>NUtilities.Tests</RootNamespace>
+    <AssemblyName>a</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -60,11 +60,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Attributes\AttributeResources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AttributeResources.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Attributes\LocalizedDescriptionAttributeTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NUtilities\NUtilities.csproj">
+      <Project>{96fe0a6d-c80e-4e20-9f46-cc57685a6921}</Project>
+      <Name>NUtilities</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Attributes\AttributeResources.sv.resx" />
+    <EmbeddedResource Include="Attributes\AttributeResources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>AttributeResources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
