Added EnumHelper class.

--- a/NUtilities.Test/NUtilities.Tests.csproj
+++ b/NUtilities.Test/NUtilities.Tests.csproj
@@ -66,6 +66,7 @@
       <DependentUpon>AttributeResources.resx</DependentUpon>
     </Compile>
     <Compile Include="Attributes\LocalizedDescriptionAttributeTests.cs" />
+    <Compile Include="Helpers\EnumHelperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
